--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <div class="studyMaterials">
         <div class="uparwale">
         <div class="IIT-JEE">
-            <a href="#"><img src="./Resources/iitjee.jpeg" alt="" class="iitJEE"></a>
+            <a href="#"><img src="iitjee.jpeg" alt="" class="iitJEE"></a>
             <br><br>
             <button class="study" id="stiit">Study</button>
         </div>
 
         <div class="NEET">
-            <a href="#"><img src="./Resources/neet.jpeg" alt="" class="neeT"></a>
+            <a href="#"><img src="neet.jpeg" alt="" class="neeT"></a>
             <br><br>
             <button class="study" id="stiit">Study</button>
 
         </div>
 
         <div class="Boards">
-            <a href="#"><img src="./Resources/boards.jpeg" alt="" class="boarD"></a>
+            <a href="#"><img src="boards.jpeg" alt="" class="boarD"></a>
             <br><br>
             <button class="study" id="boarD">Study</button>
         </div>
@@ -40,19 +40,19 @@
         <div class="nichewale">
 
         <div class="computerScience">
-            <a href="#"><img src="./Resources/cs.png" alt="" class="cS"></a>
+            <a href="#"><img src="cs.png" alt="" class="cS"></a>
             <br><br>
             <button class="study" id="cS">Study</button>
         </div>
 
         <div class="MHT-CET">
-            <a href="#"><img src="./Resources/mhtcet.jpeg" alt="" class="mhtCET"></a>
+            <a href="#"><img src="mhtcet.jpeg" alt="" class="mhtCET"></a>
             <br><br>
             <button class="study" id="mhtCET">Study</button>
         </div>
 
         <div class="handWrittens">
-            <a href="#"><img src="./Resources/handwriiten.jpeg" alt="" class="Handwritten"></a>
+            <a href="#"><img src="handwriiten.jpeg" alt="" class="Handwritten"></a>
             <br><br>
             <button class="study" id="Handwrittens">Study</button>
         </div>
