--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         <div class="IIT-JEE">
             <a href="#"><img src="iitjee.jpeg" alt="" class="iitJEE"></a>
             <br><br>
-            <button class="study" id="stiit">Study</button>
+            <button class="study" id="stiit"><span class"study-content">Padhlo!!</span></button>
         </div>
 
         <div class="NEET">
             <a href="#"><img src="neet.jpeg" alt="" class="neeT"></a>
             <br><br>
-            <button class="study" id="stiit">Study</button>
+            <button class="study" id="stiit"><span class"study-content">Padhlo!!</span></button>
 
         </div>
 
         <div class="Boards">
             <a href="#"><img src="boards.jpeg" alt="" class="boarD"></a>
             <br><br>
-            <button class="study" id="boarD">Study</button>
+            <button class="study" id="boarD"><span class"study-content">Padhlo!!</span></button>
         </div>
         </div>
 <br><br>
@@ -42,19 +42,19 @@
         <div class="computerScience">
             <a href="#"><img src="cs.png" alt="" class="cS"></a>
             <br><br>
-            <button class="study" id="cS">Study</button>
+            <button class="study" id="cS"><span class"study-content">Padhlo!!</span></button>
         </div>
 
         <div class="MHT-CET">
             <a href="#"><img src="mhtcet.jpeg" alt="" class="mhtCET"></a>
             <br><br>
-            <button class="study" id="mhtCET">Study</button>
+            <button class="study" id="mhtCET"><span class"study-content">Padhlo!!</span></button>
         </div>
 
         <div class="handWrittens">
             <a href="#"><img src="handwriiten.jpeg" alt="" class="Handwritten"></a>
             <br><br>
-            <button class="study" id="Handwrittens">Study</button>
+            <button class="study" id="Handwrittens"><span class"study-content">Padhlo!!</span></button>
         </div>
     </div>
 
